결제내역 제출 취소 기능 구현 완료

--- a/src/main/resources/templates/payhist.html
+++ b/src/main/resources/templates/payhist.html
@@ -153,6 +153,7 @@
                 <button type="button" class="btn btn-danger" id="histPDFBtn">PDF</button>
                 <button type="button" class="btn btn-success" id="histCSVBtn">CSV</button>
                 <button type="button" class="btn btn-primary" id="submitHist">제출</button>
+                <button type="button" class="btn btn-secondary" id="submitCancel">제출 취소</button>
                 <button type="button" id="deleteRow" class="btn btn-secondary">삭제</button>
             </div>
         </div>
