결재 페이지 레이아웃 구성 완료

--- a/src/main/resources/static/css/corpcard/common.css
+++ b/src/main/resources/static/css/corpcard/common.css
@@ -8,3 +8,5 @@
 .table-style1 th {background-color: #e9ecef; padding-left: 8px; width: 15%; border-style: solid; border-color: inherit;}
 .table-style2 {font-size: small;}
 .th-style1 {width: 80px;}
+
+main {min-height:60vh;}
