--- a/src/main/resources/templates/payhist.html
+++ b/src/main/resources/templates/payhist.html
@@ -188,7 +188,8 @@
     </div>
     <!--첨부파일 toast-->
     <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
-        <div id="liveToast" class="toast hide" role="status" aria-live="polite" aria-atomic="true" data-bs-autohide="false">
+        <div id="liveToast" class="toast hide" role="status" aria-live="polite" aria-atomic="true"
+             data-bs-autohide="false">
             <div class="toast-header">
                 <img th:src="@{/icons/paperclip.svg}" class="rounded me-2">
                 <strong class="me-auto">첨부파일</strong>
@@ -200,7 +201,8 @@
                     <input type="file" name="atchUpload" id="atchUpload" accept=".png, .jpg, .pdf" multiple/>
                 </label>
                 <button type="button" class="ms-2 btn btn-outline-danger btn-sm" id="atchDelBtn">삭제</button>
-                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close" id="toastCloseBtn"></button>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"
+                        id="toastCloseBtn"></button>
             </div>
             <div class="toast-body">
                 <span id="atchEmpty">해당 연월의 첨부파일이 없습니다.</span>
@@ -240,6 +242,7 @@
     $(function () {
         $payhist.init();
     });
+
 </script>
 </body>
 </html>
