결재 페이지 검색 부분 수정 중

--- a/src/main/resources/templates/approval.html
+++ b/src/main/resources/templates/approval.html
@@ -28,13 +28,13 @@
                         <th class="ps-1" style="width:5%; text-align:right;">부서</th>
                         <td style="width:15%;">
                             <select class="form-select form-select-sm" id="deptSelect" name="dept" required>
-                                <option value="" selected>---</option>
+                                <option value="ALL" selected>전체</option>
                             </select>
                         </td>
                         <th class="ps-1" style="width:3%; text-align:right;">팀</th>
                         <td style="width:15%;">
                             <select class="form-select form-select-sm" id="teamSelect" name="team" required>
-                                <option value="" selected>---</option>
+                                <option value="ALL" selected>전체</option>
                             </select>
                         </td>
                         <th class="ps-1" style="width:5%; text-align:right;">기안자</th>
