결재 건 조회 부서 팀 조회 설정 완료

--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -13,7 +13,7 @@
               관리자
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" th:href="@{/admin/hist}">내역 조회</a></li>
+              <li><a class="dropdown-item" th:href="@{/admin/adminHist}">내역 조회</a></li>
               <li><a class="dropdown-item" th:href="@{/admin/auth}">권한 관리</a></li>
               <li><a class="dropdown-item" th:href="@{/admin/card}">카드 관리</a></li>
             </ul>
