--- a/src/main/resources/templates/approval.html
+++ b/src/main/resources/templates/approval.html
@@ -55,18 +55,18 @@
             </form>
         </div>
         <div class="table-responsive-xxl">
-            <table id="approvalTable"
-                   class="text-center table table-hover table-bordered table-sm align-middle table-style2">
+            <table id="approvalTable" style="width:100%"
+                   class="text-center table table-hover table-bordered table-sm align-middle">
                 <thead class="table-secondary">
                 <tr>
-                    <th scope="col">No.</th>
-                    <th scope="col" style="width:150px;">부서</th>
-                    <th scope="col" class="th-style1">팀</th>
-                    <th scope="col" class="th-style1">직위</th>
-                    <th scope="col" class="th-style1">기안자</th>
-                    <th scope="col" class="th-style1">기간</th>
-                    <th scope="col" class="th-style1">상태</th>
-                    <th scope="col" class="th-style1">합계(원)</th>
+                    <th scope="col" style="width:10%;">No.</th>
+                    <th scope="col" style="width:20%;">부서</th>
+                    <th scope="col" style="width:15%;">팀</th>
+                    <th scope="col" style="width:10%;">직위</th>
+                    <th scope="col" style="width:10%;">기안자</th>
+                    <th scope="col" style="width:10%;">제출 날짜</th>
+                    <th scope="col" style="width:10%;">상태</th>
+                    <th scope="col" style="width:15%;">합계(원)</th>
                 </tr>
                 </thead>
                 <tbody>
