첨부파일 구현 완료

--- a/src/main/resources/templates/approval.html
+++ b/src/main/resources/templates/approval.html
@@ -92,7 +92,7 @@
             </div>
             <div class="table-responsive-xxl">
                 <table id="histTable"
-                       class="text-center table table-hover table-bordered table-sm align-middle table-style2">
+                       class="text-center table table-bordered table-sm align-middle table-style2">
                     <thead class="table-secondary">
                     <tr>
                         <th scope="col">사용일</th>
