관리자 카드 관리 및 쿼리 수정 완료

--- a/src/main/resources/templates/admin/auth.html
+++ b/src/main/resources/templates/admin/auth.html
@@ -87,7 +87,7 @@
                          viewBox="0 0 16 16">
                         <image th:href="@{/icons/briefcase-fill.svg}"></image>
                     </svg>
-                    기간별 통계
+                    사용자 목록
                 </div>
                 <div class="table-responsive-xxl">
                     <table id="addManagerTable"
